[project]
name = "python-execution-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "jupyterlab>=4.3.3",
    "loguru>=0.7.3",
    "nest-asyncio>=1.6.0",
    "requests>=2.32.3",
    "stamina>=24.3.0",
]
